# rag-fastapi

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  crud.py  main.py  models.py
app/api/: deps.py  main.py
app/api/routes/: documents.py  login.py  query.py  users.py
app/core/: config.py  db.py  security.py
app/services/: rag.py
rag/: .gitignore
