[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.3.0",
    "pydantic-settings>=2.4.0",
    "pyjwt>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "openai>=1.40.0",
    "pypdf>=4.0.0",
    "python-multipart>=0.0.9",
    "alembic>=1.13.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "coverage>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.fastapi]
entrypoint = "app.main:app"